feat(main): refactoring, correcting models, and e.t.c