@@ -35,7 +35,7 @@ public class ProtocolServiceImpl implements ProtocolService {
         return protocolRepository.findAll()
                 .stream()
                 .map(ProtocolMapper::mapToProtocolDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -52,13 +52,13 @@ public class ProtocolServiceImpl implements ProtocolService {
 
     @Override
     public Protocol updateProtocol(Protocol protocol) {
-        Protocol upd = getProtocol(protocol.getFioStudent());
+        Protocol upd = getProtocol(protocol.getStudent().getName());
         if (upd == null) return protocolRepository.save(protocol);
 
-        if (protocol.getGrade() != null) upd.setGrade(protocol.getGrade());
+        if (protocol.getGrade() != null)  upd.setGrade(protocol.getGrade());
         if (protocol.getVolume() != null) upd.setVolume(protocol.getVolume());
         if (protocol.getReview() != null) upd.setReview(protocol.getReview());
-        if (protocol.getFqwName() != null) upd.setFqwName(protocol.getFqwName());
+        if (protocol.getFqw() != null)    upd.setFqw(protocol.getFqw());
         if (protocol.getHeadOfTheFQW() != null) upd.setHeadOfTheFQW(protocol.getHeadOfTheFQW());
 
         return protocolRepository.save(upd);
